CTOO-220 (feature): Support reading JSON files (#116)
https://treasure-data.atlassian.net/browse/CTOO-220