@@ -112,18 +112,26 @@ lazy val lang =
       Antlr4 / antlr4PackageName := Some("com.treasuredata.flow.lang.compiler.parser"),
       Antlr4 / antlr4GenListener := true,
       Antlr4 / antlr4GenVisitor  := true,
+      javaOptions ++= Seq(
+        "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
+      ),
       libraryDependencies ++= Seq(
         "org.wvlet.airframe" %% "airframe"          % AIRFRAME_VERSION,
         "org.wvlet.airframe" %% "airframe-launcher" % AIRFRAME_VERSION,
         "org.wvlet.airframe" %% "airframe-ulid"     % AIRFRAME_VERSION,
         // Add sql parser for testing purpose
-        "org.wvlet.airframe" %% "airframe-sql" % AIRFRAME_VERSION % Test
+        "org.wvlet.airframe" %% "airframe-sql" % AIRFRAME_VERSION % Test,
+        "org.apache.arrow"    % "arrow-vector" % "9.0.0"
 //        // Add Spark as a reference impl (Scala 2)
 //        "org.apache.spark" %% "spark-sql" % "3.5.1" % Test excludeAll (
 //          // exclude sbt-parser-combinators as it conflicts with Scala 3
 //          ExclusionRule(organization = "org.scala-lang.modules", name = "scala-parser-combinators_2.13")
 //        ) cross (CrossVersion.for3Use2_13)
       ),
+      // To enable JVM options
+      Test / fork := true,
+      // When forking, the base directory should be set to the root directory
+      Test / baseDirectory := (ThisBuild / baseDirectory).value,
       // Watch changes of example .flow files upon testing
       Test / watchSources ++= ((ThisBuild / baseDirectory).value / "examples" ** "*.flow").get
     )
